Remove TextImpl and InputKey wrapper classes